[gd_scene load_steps=13 format=3 uid="uid://dyddvv17y3dmy"]

[ext_resource type="Script" uid="uid://cdced8n48ndm" path="res://Dialogs/zone_editor_menu_dialog.gd" id="1_ssmqt"]
[ext_resource type="Texture2D" uid="uid://c0etl38vn3bw6" path="res://Textures/UI/Buttons/button_cross.png" id="2_4w7ob"]
[ext_resource type="Script" uid="uid://0y8v6gxx5db6" path="res://Scenes/fadeable_container.gd" id="3_jmev3"]
[ext_resource type="Texture2D" uid="uid://dbp2api70mifw" path="res://Textures/UI/MiniButtons/mini_button_recycle_wide.png" id="5_kkhx4"]
[ext_resource type="Texture2D" uid="uid://cnbxk2ekrux0c" path="res://Textures/UI/Buttons/button_play.png" id="5_rct3w"]
[ext_resource type="Texture2D" uid="uid://byl13ejupqdy" path="res://Textures/UI/Buttons/button_settings.png" id="6_ace3m"]
[ext_resource type="Texture2D" uid="uid://b74d5olw0o7l6" path="res://Textures/UI/Buttons/button_main_menu.png" id="7_66sxi"]
[ext_resource type="Texture2D" uid="uid://c1kyb7ia7ta4x" path="res://Textures/UI/Buttons/button_sub_menu_entry.png" id="7_htgnp"]
[ext_resource type="Script" uid="uid://yvc5t2j67ltg" path="res://Dialogs/cursor_offset_button.gd" id="8_3ni0a"]
[ext_resource type="Script" uid="uid://ckhevounoe7f4" path="res://Scenes/fadeable_panel_container.gd" id="8_kw77y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kw77y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_427qg"]

[node name="ZoneEditorMenuDialog" type="Control"]
process_mode = 3
z_index = 8
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("1_ssmqt")

[node name="FadeablePanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_kw77y")
script = ExtResource("8_kw77y")
metadata/_custom_type_script = "uid://ckhevounoe7f4"

[node name="TopLeftMarginContainer" type="MarginContainer" parent="FadeablePanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="FadeablePanelContainer/TopLeftMarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2

[node name="CloseButton" type="TextureButton" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_4w7ob")

[node name="SettingsButtonFade" type="CenterContainer" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 0
script = ExtResource("3_jmev3")

[node name="SettingsButton" type="TextureButton" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer/SettingsButtonFade"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_ace3m")

[node name="ZoneTestButton" type="TextureButton" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_rct3w")

[node name="TextureRect" type="TextureRect" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer"]
visible = false
self_modulate = Color(0.686275, 1, 0, 1)
custom_minimum_size = Vector2(384, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0
texture = ExtResource("5_kkhx4")

[node name="ZoneEditorLabel" type="RichTextLabel" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"MainMenuRichTextLabel"
text = "Zone Editor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MainMenuButtonFadeable" type="CenterContainer" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 0
script = ExtResource("3_jmev3")

[node name="MainMenuButton" type="TextureButton" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MainMenuButtonFadeable"]
layout_mode = 2
texture_normal = ExtResource("7_66sxi")

[node name="MenuFadeablePanelContainer" type="PanelContainer" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_427qg")
script = ExtResource("8_kw77y")
metadata/_custom_type_script = "uid://ckhevounoe7f4"

[node name="SubMenuVBoxContainer" type="VBoxContainer" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ClearButton" type="TextureButton" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer"]
self_modulate = Color(1, 0.6, 0.6, 0.996078)
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("7_htgnp")

[node name="RichTextLabel" type="RichTextLabel" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer/ClearButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"MainMenuRichTextLabel"
text = "Clear"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadButton" type="TextureButton" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("7_htgnp")

[node name="RichTextLabel" type="RichTextLabel" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer/LoadButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_type_variation = &"MainMenuRichTextLabel"
text = "Load"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReloadButton" type="TextureButton" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("7_htgnp")

[node name="RichTextLabel" type="RichTextLabel" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer/ReloadButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_type_variation = &"MainMenuRichTextLabel"
text = "Reload"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveButton" type="TextureButton" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("7_htgnp")

[node name="RichTextLabel" type="RichTextLabel" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer/SaveButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_type_variation = &"MainMenuRichTextLabel"
text = "Save"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveAsButton" type="TextureButton" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("7_htgnp")

[node name="RichTextLabel" type="RichTextLabel" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer/SaveAsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_type_variation = &"MainMenuRichTextLabel"
text = "Save as..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="CursorOffsetButton" type="TextureButton" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("7_htgnp")
script = ExtResource("8_3ni0a")

[node name="RichTextLabel" type="RichTextLabel" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer/CursorOffsetButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_type_variation = &"MainMenuRichTextLabel"
text = "CrsO: 0.0"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="TodoButton" type="TextureButton" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer"]
visible = false
self_modulate = Color(0.78, 0.3198, 0.32747, 1)
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("7_htgnp")

[node name="RichTextLabel" type="RichTextLabel" parent="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer/TodoButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_type_variation = &"MainMenuRichTextLabel"
text = ":TODO:"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="on_faded_in" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_faded_in"]
[connection signal="on_faded_out" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_faded_out"]
[connection signal="on_fading_in" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_fading_in"]
[connection signal="on_fading_out" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_fading_out"]
[connection signal="pressed" from="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer/SettingsButtonFade/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer/ZoneTestButton" to="." method="_on_zone_test_button_pressed"]
[connection signal="pressed" from="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MainMenuButtonFadeable/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer/ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="pressed" from="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer/SaveAsButton" to="." method="_on_save_as_button_pressed"]
[connection signal="pressed" from="FadeablePanelContainer/TopLeftMarginContainer/VBoxContainer/HBoxContainer2/MenuFadeablePanelContainer/SubMenuVBoxContainer/CursorOffsetButton" to="." method="_on_cursor_offset_button_pressed"]
